--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GamesList">
         <activity
-            android:name=".GamesAdapter"
+            android:name=".GamesAdd"
             android:exported="false" />
-        <activity
-            android:name=".GamesDetail"
-            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
